# ChangeLog for app-admin/pwgen
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/pwgen/ChangeLog,v 1.39 2006/09/05 16:58:01 wolf31o2 Exp $

  05 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> files/pwgen.rc:
  Removing the escapes in the init script. Thanks to Tim Yamin
  <plasmaroo@gentoo.org> for pointing it out.

  03 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  -files/pwgen-2.03-addl_pw_chars.patch, -pwgen-2.03-r1.ebuild:
  Cleaning up older versions.

  06 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> pwgen-2.04.ebuild:
  Stable on hppa.

  17 Sep 2005; Aron Griffis <agriffis@gentoo.org> pwgen-2.04.ebuild:
  Mark 2.04 stable on ia64

  14 Sep 2005; Aaron Walker <ka0ttic@gentoo.org> pwgen-2.04.ebuild:
  Stable on mips for bug #105690.

  13 Sep 2005; Markus Rothe <corsair@gentoo.org> pwgen-2.04.ebuild:
  Stable on ppc64 (bug #105690)

  12 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org> pwgen-2.04.ebuild:
  Stable on sparc wrt #105690

  12 Sep 2005; Fabian Groffen <grobian@gentoo.org> pwgen-2.04.ebuild:
  Marked stable on ppc-macos (bug #105690)

  12 Sep 2005; Joseph Jezak <josejx@gentoo.org> pwgen-2.04.ebuild:
  Marked ppc stable for bug #105690.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> pwgen-2.04.ebuild:
  Marked stable on x86 and closing bug #105690.

  12 Sep 2005; <dang@gentoo.org> pwgen-2.04.ebuild:
  Marked stable on amd64

  12 Sep 2005; Fernando J. Pereda <ferdy@gentoo.org> pwgen-2.04.ebuild:
  stable on alpha wrt bug #105690

  05 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org> -pwgen-2.01.ebuild,
  pwgen-2.03-r1.ebuild, pwgen-2.04.ebuild:
  Added ia64 to KEYWORDS.  Blame plasmaroo.

*pwgen-2.04 (15 Jun 2005)

  15 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org> +pwgen-2.04.ebuild:
  Version bumped to 2.04 and closing bug #96182.

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance
