@@ -3,19 +3,18 @@ MD5 68328500e34c555ee22bcfad9102fe4c files/pwgen.rc 495
 RMD160 da13a35d989f3f30c1011ed43d99046fb2ddb45b files/pwgen.rc 495
 SHA256 156c01a9549390112f037bbbc27bebe6e0585c975d00d2ea13314e03f3d6f6b8 files/pwgen.rc 495
 DIST pwgen-2.04.tar.gz 47276 RMD160 600a782ec2ecdf2e8b2eba4d7b35442b5fbfaee3 SHA1 968aabedd6dc984deb925d4f88252fa34cf8d9e6 SHA256 f2edeff7fe4968187201e37d84254fabceb155fadc0979a06f5643dec290b715
-EBUILD pwgen-2.04.ebuild 808 RMD160 2abcf1be829634087d740c9b36eb1ba3ad088df3 SHA1 1111a702a8f2cee791892eaaa8c0c7412f347a3f SHA256 1758379b8c9b0239862940969b12b0ca57863d5da2bccdb3cdbfa9ddf732f517
-MD5 ac0f17715cc3d93ee4959e6cdbbea6ed pwgen-2.04.ebuild 808
-RMD160 2abcf1be829634087d740c9b36eb1ba3ad088df3 pwgen-2.04.ebuild 808
-SHA256 1758379b8c9b0239862940969b12b0ca57863d5da2bccdb3cdbfa9ddf732f517 pwgen-2.04.ebuild 808
-MISC ChangeLog 4711 RMD160 462feefafe81c3ec57c0154cea9d2b744fd14cab SHA1 2aae2d9cb52baf91114ccaa2924d3f6cd8d37535 SHA256 78e1576f2442b5160def0c6c9226634a81bac001665b918e509148553fa5ee4a
-MD5 f38274f6db7b61fa99fd790765d78666 ChangeLog 4711
-RMD160 462feefafe81c3ec57c0154cea9d2b744fd14cab ChangeLog 4711
-SHA256 78e1576f2442b5160def0c6c9226634a81bac001665b918e509148553fa5ee4a ChangeLog 4711
+EBUILD pwgen-2.04.ebuild 805 RMD160 4de7e88a5bf33a7b58f74604910182fba44689a0 SHA1 2706b19552facd0c92775b707649dc5ab5549855 SHA256 e1ead58422a6bd96f220c11ac0bf31b8fa2cf97f84211b782c7109c5f45ff897
+MD5 c3b24f80cfaf1a8e85877829b99c4f74 pwgen-2.04.ebuild 805
+RMD160 4de7e88a5bf33a7b58f74604910182fba44689a0 pwgen-2.04.ebuild 805
+SHA256 e1ead58422a6bd96f220c11ac0bf31b8fa2cf97f84211b782c7109c5f45ff897 pwgen-2.04.ebuild 805
+MISC ChangeLog 4822 RMD160 f5eec1374589f8e9d90f2af1555211525c713327 SHA1 92dd646d03b0144e45ed676e280ce5b0c9d97b97 SHA256 f7b30a645f54366b41df56b1a0df32085fe0659406fa668a0c02ddf607b7ef42
+MD5 5338c10c310b11edc6640490b5508ce2 ChangeLog 4822
+RMD160 f5eec1374589f8e9d90f2af1555211525c713327 ChangeLog 4822
+SHA256 f7b30a645f54366b41df56b1a0df32085fe0659406fa668a0c02ddf607b7ef42 ChangeLog 4822
 MISC metadata.xml 159 RMD160 8db5ed254a6b9baf8f53368da9e71c5532a46073 SHA1 1e72098aafb1fa729eba6fc8357c7e732eb79dee SHA256 b6e17484225400d76c65d178bf5a10dc0a8da7f345993c2acc63d1093a77c90d
 MD5 d86e5b5e47260e5a965eae2afe6d6d40 metadata.xml 159
 RMD160 8db5ed254a6b9baf8f53368da9e71c5532a46073 metadata.xml 159
 SHA256 b6e17484225400d76c65d178bf5a10dc0a8da7f345993c2acc63d1093a77c90d metadata.xml 159
-size 229 files/digest-pwgen-2.04 229
+MD5 9e55b4c10f91989522bfe92e02b3c8b4 files/digest-pwgen-2.04 229
 RMD160 c41230e3ab49e5182d74b4ae1fe81906fcc109da files/digest-pwgen-2.04 229
 SHA256 18c9c5903a4f73995d801b0b18ce0aa936178a5f3c8ed3e3d1ade7fa2441cc42 files/digest-pwgen-2.04 229
-MD5 9e55b4c10f91989522bfe92e02b3c8b4 files/digest-pwgen-2.04 229
