@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/pwgen
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/pwgen/ChangeLog,v 1.39 2006/09/05 16:58:01 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/pwgen/ChangeLog,v 1.40 2006/10/08 19:35:35 grobian Exp $
+
+  08 Oct 2006; Fabian Groffen <grobian@gentoo.org> pwgen-2.04.ebuild:
+  Dropped ~ppc-macos, see you in prefix.
 
   05 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> files/pwgen.rc:
   Removing the escapes in the init script. Thanks to Tim Yamin
